Fix spacing

--- a/canvas_modules/common-canvas/src/common-properties/components/flexible-table/flexible-table.scss
+++ b/canvas_modules/common-canvas/src/common-properties/components/flexible-table/flexible-table.scss
@@ -48,7 +48,7 @@ $row-left-padding: $spacing-02;
 }
 
 .properties-ft-container-wrapper {
-	// height: 400px;
+	height: 400px;
 	width: 100%;
 	position: relative;
 	overflow: hidden;
