--- a/canvas_modules/common-canvas/src/common-properties/components/virtualized-table/virtualized-table.scss
+++ b/canvas_modules/common-canvas/src/common-properties/components/virtualized-table/virtualized-table.scss
@@ -41,6 +41,7 @@
 		display: flex;
 		align-items: center;
 		margin-left: $spacing-05;
+		margin-right: $spacing-02;
 	}
 
 	.properties-autosized-vt-header {
@@ -95,6 +96,7 @@
 	.properties-vt-row-checkbox {
 		height: $spacing-07;
 		margin-left: $spacing-05;
+		margin-right: $spacing-02;
 	}
 
 	.properties-vt-double-click:first-of-type {
